Delete stale accessibility QObjects

These objects are often parented to the QWebEngineView, but not cleaned
up when changing pages, resulting in increasing memory usage over time.
It should be safe to delete them after the associated accessibility node
is deleted.

Fixes: QTBUG-140234
Pick-to: 6.8 6.9 6.10
Change-Id: I215ca01aca10873b5ce86224d98907d41e6c8991
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
Reviewed-by: Kaloyan Chehlarski <kaloyan.chehlarski@qt.io>